@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.filmezek" name="Filmezek" version="1.0.3" provider-name="heg, vargalex">
+<addon id="plugin.video.filmezek" name="Filmezek" version="1.0.4" provider-name="heg, vargalex">
 	<requires>
 		<import addon="script.module.beautifulsoup4" version="4.6.2"/>
 		<import addon="script.module.requests" version="2.22.0"/>
@@ -16,6 +16,7 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news> 
+			1.0.4 - Felirat letöltés megvalósítása
 			1.0.3 - keresés bugFix
 			1.0.2 - m3u8 linkek lejátszása inputstream adaptive használatával
 			1.0.1 - Előtöltés, felesleges részek kiszedése by vargalex
